<resources>
    <string name="app_name">GirlShow</string>
    <string name="net_error">网络错误</string>
    <string name="road">一片坦途</string>
    <string name="wall">墙外世界</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="no_picture">这个贴子中没有图片哦</string>
    <string name="need_vpn">这个页面比较邪恶，需要vpn才能访问</string>
    <string name="search_note">搜索任意内容</string>
    <string name="retry">重新尝试</string>
    <string name="get_video_play_url_error">获取视频播放地址失败</string>
    <string name="cancel">取消</string>
    <string name="menu_add_rule">新增</string>
    <string name="menu_export_to_file">导出到文件</string>
    <string name="menu_import_from_file">从文件中导入</string>
    <string name="copy_success">拷贝规则成功</string>
    <string name="image">图片</string>
    <string name="video">视频</string>

    <string name="backup_error">备份文件失败</string>
    <string name="backup_success">成功备份文件到%s</string>
    <string name="restore_not_exist">该文件不存在</string>
    <string name="restore_error">恢复文件失败</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_tip">提示</string>
    <string name="edit_required">必填</string>
    <string name="edit_choose">选填</string>
    <string name="site_manager">站点管理</string>
    <string name="debug">调试</string>
    <string name="save">保存</string>
    <string name="add_from_clip">从剪贴板导入</string>
    <string name="add_from_qrcode">扫描二维码</string>
    <string name="add_from_img">从图片二维码导入</string>
    <string name="export_to_clipboard">导出到剪贴板</string>
    <string name="study">规则学习</string>
    <string name="open_draw">打开侧边栏</string>
    <string name="close_draw">关闭侧边栏</string>
    <string name="base_info">基本信息</string>
    <string name="first_rule_title">第一级类别提取规则</string>
    <string name="second_rule_title">第二级类别提取规则</string>
    <string name="content_rule_title">内容提取规则</string>
    <string name="search_rule_title">搜索提取规则</string>
    <string name="category_name_rule">分类名称提取规则</string>
    <string name="content_name_rule">内容名称提取规则</string>
    <string name="search_name_rule">搜索结果名称提取规则</string>
    <string name="search_url_rule">搜索结果跳转url提取规则</string>
    <string name="search_imageUrl_rule">搜索结果封面url提取规则</string>
    <string name="search_desc_rule">搜索结果描述提取规则</string>
    <string name="category_url_rule">分类跳转url提取规则</string>
    <string name="content_url_rule">内容url提取规则</string>
    <string name="category_desc_rule">分类描述的提取规则</string>
    <string name="category_cover_img_rule">分类图片的提取规则</string>
    <string name="first_category_page">第一级类别分页</string>

    <string name="title_web_name">网站名称</string>
    <string name="title_web_home_url">网站首页路径</string>
    <string name="title_web_icon_url">网站icon的url</string>
    <string name="title_web_url">网站入口url</string>
    <string name="title_category_name_rule">分类名称提取规则</string>
    <string name="title_page_on">是否支持分页</string>
    <string name="title_fromHtml">下一页url是否可以从网页直接抓取</string>
    <string name="title_nextUrlRule">下一页url抓取规则</string>
    <string name="title_combinedUrl">下一页url组合规则（combinedUrl）</string>
    <string name="title_paramRule">页码抓取规则</string>
    <string name="title_startPage">起始页码</string>
    <string name="title_realRequestUrl">真正url请求地址</string>
    <string name="title_searchUrl">搜索结果跳转url</string>
    <string name="title_debug_searchtxt">搜索调试关键字</string>
    <string name="title_searchSuggestUrl">搜索建议url</string>
    <string name="title_searchSuggestKeyRule">搜索建议结果的关键字提取规则</string>
    <string name="title_searchSuggestTimeRule">搜索建议结果的关键字次数提取规则</string>
    <string name="title_supportSearch">是否支持搜索</string>
    <string name="title_supportSearchSuggest">是否支持搜索建议</string>
    <string name="title_search_note">以下是搜索结果的提取规则</string>
    <string name="check_not_null">%s不能为空</string>

    <string name="btn_debug_first_category">调试一级分类规则</string>
    <string name="btn_debug_second_category">调试二级分类规则</string>
    <string name="btn_debug_content_category">调试具体内容规则</string>
    <string name="btn_debug_search_category">调试搜索规则</string>
    <string name="btn_debug_search_suggest_category">调试搜索建议规则</string>

    <string name="delete_confirm">确定要删除此网站吗？</string>
    <string name="error_json">非法的json，无法转换成网站规则</string>
    <string name="confirm">确定</string>


    <string name="help_dynamicRender">有些网站使用非常多的js动态渲染，这个时候直接使用http请求网页获取到的内容不全，
        这个时候可以使用webview来渲染界面，保证一些控件加载正常，然后获完整的页面。比如一般网页的翻页按钮都是后来通过js渲染出来的，
        此时我们可以将这个值设为true，这样才能从界面上抓取下一页的地址
    </string>
    <string name="help_type">目前仅支持抓取图片和视频网站</string>
    <string name="help_encoding">大部分网站都是utf-8编码，然而如果使用utf-8编码导致中文乱码，可以尝试使用GBK</string>
    <string name="help_fromHtml">一般来说，如果页面上有翻页控件，我们可以直接从下一页按钮中直接获取下一页url，这个参数应设为true，如果是某些滚动到底部自动翻页加载的
        网站，就需要我们自己拼接翻页url规则，这个参数应当设为false
    </string>
    <string name="help_combinedUrl">当我们无法从页面上抓取下一页地址的时候，我们需要自己拼接出下一页地址的url，
        比如： http://www.baidu.com?page={page},其中{page}是页码的占位符，注意，通常情况，http://www.baidu.com其实是上一个页面
        传过来的，在这里我们并不知道是多少，可以这样表示{baseUrl}?page={page}
    </string>
    <string name="help_paramRule">有些网站页码不是利用数字，而是其他参数，所以这里需要提取规则从页面中提取出下一页页码,例如{baseUrl}?next={page},
        其中{page}不是数字，而是一个来自html页面中的某个注释的时间戳，这个规则就是抓取这个时间戳的
    </string>
    <string name="help_startPage">如果翻页规则是利用数字来的，我们需要区分页码是从0开始还是从1开始，由于本app翻页统一从1开始，所以需要大家计算好起始页码</string>
    <string name="help_realRequestUrl">对于一些网页来说，从上一个页面的url点进来，该url并不会获取真正的内容，而是通过js向一个新的url请求，
        这里就是填写这个新的url，其中{baseUrl}代表上次获取的url，比如我们获取到的真实url是：www.baidu.com,但是真实请求地址是www.baidu.com/activity,
        这样我们这里可以表示成{baseUrl}/activity
    </string>

    <string name="help_web_home_url">某些网站的首页根路径不是协议+域名，例如不是https://www.baidu.com,而是https://www.baidu.com/index.php
        ，我们需要这个值来计算一些相对路径的全路径</string>
    <string name="help_suggestUrl">搜索建议的url地址，可以用{searchTxt}占位</string>
    <string name="help_debug_searchtxt">调试搜索时，可以在这里填写想要搜索的内容</string>

    <string name="log_category_success">分类获取成功，总数量：%1$d.\n下一页请求地址：%2$s</string>
    <string name="log_content_success">内容获取成功，总数量：%1$d.\n下一页请求地址：%2$s</string>
    <string name="log_search_success">搜索结果获取成功，总数量：%1$d.\n下一页请求地址：%2$s</string>
    <string name="log_search_suggest_success">搜索建议获取成功，总数量：%d</string>
    <string name="log_category_fail">未解析到任何分类，请确认分类规则正确</string>
    <string name="log_content_fail">未解析到任何具体内容，请确认规则正确</string>
    <string name="check_detail_log">查看详细日志</string>
    <string name="please_debug_first_category">请先调试第一级分类规</string>
    <string name="please_debug_second_category">请先调试第二级分类规则</string>
    <string name="import_select_rule">导入选中的网站</string>
    <string name="import_none">文件中没有网站规则记录</string>
    <string-array name="encoding">
        <item>utf-8</item>
        <item>GBK</item>
    </string-array>
    <string-array name="siteType">
        <item>video</item>
        <item>image</item>
    </string-array>
    <string-array name="startPages">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>
