<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:background="@mipmap/ic_road"
                 android:layout_height="0dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/road"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:id="@+id/test"/>


    </FrameLayout>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="@mipmap/ico_wall"
                    android:layout_height="0dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wall"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:id="@+id/vpn"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_vpn"
            android:layout_below="@id/vpn"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"

        />
    </RelativeLayout>


</LinearLayout>